--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@mdx-js/react": "^1.5.1",
     "@next/mdx": "^9.1.1",
+    "@zeit/next-css": "^1.0.1",
     "connected-react-router": "^6.5.2",
     "core-js": "2",
     "express": "^4.17.1",
     "linaria": "^1.3.1",
     "next": "^9.1.1",
     "next-compose-plugins": "^2.2.0",
+    "nextjs-sitemap-generator": "^0.3.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
